Shruthi, BalajiN | #0 | Fixing build pipeline
	1. Created separate profiles for running unit, integration and functional tests
	2. Using run-war goal to run jetty
	3. loading and dropping seed data only at the places where it is necessary.